--- a/006 - Base Apparel coming soon page/style.css
+++ b/006 - Base Apparel coming soon page/style.css
@@ -19,6 +19,9 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 10px;
     line-height: 1.1;
+    animation: comein 0.5s ease forwards;
+    margin-bottom: 0;
+    transform: translateX(-100%);
 }
 
 h1 span {
@@ -30,7 +33,12 @@ p {
     color: hsl(0, 36%, 70%);
     letter-spacing: 1px;
     line-height: 2rem;
+    margin: 30px 0;
+    transform: translateX(100%);
+    opacity: 0;
+    animation: comeinright 0.5s ease forwards;
 }
+
 
 .container {
     display: flex;
@@ -40,6 +48,11 @@ p {
 .left {
     padding: 0 40px;
     width: 60%;
+}
+
+.inner-container{
+	max-width: 450px;
+	margin: auto;
 }
 
 .right {
@@ -57,8 +70,17 @@ p {
     width: 200px;
 }
 
+.bg-mobile {
+   display: none; 
+}
+
 form {
     position: relative;
+    max-width: 300px;
+}
+
+form.error {
+
 }
 
 input {
@@ -71,28 +93,104 @@ input {
 	width: 100%;
 }
 
+input:focus {
+	border-width: 2px;
+	box-shadow: 0px 0px 10px hsla(0, 36%, 70%, 0.5);
+	outline: none;
+}
+
+input::placeholder {
+	color: hsl(0, 36%, 70%);
+}
+
+form.error input {
+	border: 2px solid hsl(0, 93%, 68%);
+}
+
 button {
-	background-image: linear-gradient(135deg,
-    hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+	background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 	box-shadow: 2px 5px 10px hsla(0, 36%, 70%, 0.5);
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
 	padding: 15px;
-    position: absolute;
-    top: 0;
-    right: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
 	transition: opacity 0.2s ease;
 	height: 55px;
 	width: 100px;
 }
 
+button:hover{
+    opacity: 0.6;
+}
+
 .error-icon {
-    position: absolute;
-    top: 15px;
-    right: 120px;
+	display: none;
+	position: absolute;
+	top: 15px;
+	right: 110px;
+}
+
+form.error .error-icon {
+	display: block;
 }
 
 small {
+	color: hsl(0, 93%, 68%);
+	display: none;
+	margin-top: 15px;
+	margin-left: 30px;
+}
 
+form.error small {
+	display: block;
+}
+
+.attribution {
+    margin: 3rem;
+    font-size: 14px; text-align: center;
+}
+
+.attribution a {
+    text-decoration: none;
+    color: hsl(229, 6%, 66%);
+}
+
+/*Animations*/
+
+@keyframes comein {
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes comeinright {
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .logo {
+        margin: 30px 0;
+        width: 100px;
+    }
+
+    .bg-mobile {
+        display: block;
+        margin-left: -40px;
+        margin-right: -40px;
+        width: calc(100% + 80px);
+    }
+
+    .left {
+        width: 100%;
+    }
+
+    .right {
+        display: none;
+    }
 }
