--- a/007 - 3 column preview card component/style.css
+++ b/007 - 3 column preview card component/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
+:root {
+    --bright-orange: hsl(31, 77%, 52%);
+    --dark-cyan: hsl(184, 100%, 22%);
+    --very-dark-cyan: hsl(179, 100%, 13%);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -16,8 +22,76 @@ h3 {
     font-size: 2rem;
 }
 
+p {
+    font-size: 15px;
+    line-height: 1.6;
+}
+
+.btn {
+    background-color: #fff;
+    border: 2px solid #fff;
+    border-radius: 30px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: #fff;
+}
+
 body, button {
     font-family: "Lexend Deca", sans-serif;
+}
+
+.bright-orange{
+    background-color: var(--bright-orange);
+    color: #fff;
+    border-radius: 10px 10px 0 0;
+}
+
+.bright-orange .btn {
+    color: var(--bright-orange);
+}
+
+.dark-cyan {
+    background-color: var(--dark-cyan);
+    color: #fff;
+}
+
+.dark-cyan .btn {
+    color: var(--dark-cyan);
+}
+
+.very-dark-cyan .btn {
+    color: var(--very-dark-cyan);
+}
+
+.very-dark-cyan {
+    background-color: var(--very-dark-cyan);
+    color: #fff;
+    border-radius: 0 0 10px 10px;
+}
+
+.container {
+    padding: 20px;
+}
+
+.card {
+    padding: 30px;
+}
+
+.card img {
+    margin-bottom: 205x;
+}
+
+.card h3 {
+    margin-bottom: 20px;
+}
+
+.card p {
+    margin-bottom: 30px;
 }
 
 .attribution {
@@ -28,4 +102,37 @@ body, button {
 .attribution a {
     text-decoration: none;
     color: hsl(229, 6%, 66%);
+}
+
+@media (min-width: 992px) {
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        max-width: 900px;
+        margin: auto;
+    }
+
+    .bright-orange{
+        border-radius: 10px 0 0 10px;
+    }
+
+    .very-dark-cyan{
+        border-radius: 0 10px 10px 0;
+    }
+
+    .card {
+        padding: 45px;
+    }
+
+    .card p {
+        margin-bottom: 80px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container {
+        max-width: 1100px;
+    }
 }
