--- a/010 - Interactive rating component/style.css
+++ b/010 - Interactive rating component/style.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+:root {
+    --orange: hsl(25, 97%, 53%);
+    --light-grey: hsl(217, 12%, 63%);
+    --medium-grey: hsl(216, 12%, 54%);
+    --dark-blue: hsl(213, 19%, 18%);
+    --very-dark-blue: hsl(216, 12%, 8%);
+    --white: hsl(0, 0%, 100%);
+
+    --ff-overpass: 'Overpass', sans-serif;
+
+    --fs-1: 15px;
+
+    --fw-300: 400;
+    --fw-700: 700;
+}
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: var(--ff-overpass);
+}
+
+.body {
+    background-color: hsl(216, 12%, 8%);
+}
+
+.h1 {
+    color: var(--white);
+}
+
+.p {
+    color: var(--light-grey);
+}
+
 .attribution {
     font-size: 1rem;
     text-align: center;
