--- a/010 - Interactive rating component/style.css
+++ b/010 - Interactive rating component/style.css
@@ -7,10 +7,12 @@
     --dark-blue: hsl(213, 19%, 18%);
     --very-dark-blue: hsl(216, 12%, 8%);
     --white: hsl(0, 0%, 100%);
+    --gradient01: radial-gradient(98.96% 98.96% at 50% 0%, #232a34 0%, #181e27 100%);
 
     --ff-overpass: 'Overpass', sans-serif;
 
     --fs-1: 15px;
+    --fs-2: 28px;
 
     --fw-300: 400;
     --fw-700: 700;
@@ -23,21 +25,69 @@
     font-family: var(--ff-overpass);
 }
 
-.body {
+body {
     background-color: hsl(216, 12%, 8%);
 }
 
-.h1 {
+h1 {
+    font-size: var(--fs-2);
+    line-height: 35px;
     color: var(--white);
+    margin-bottom: 7px;
 }
 
-.p {
+p {
+    font-size: var(--fs-1);
     color: var(--light-grey);
+    line-height: 24px;
+    margin-bottom: 24px;
+}
+
+.container {
+    margin: 0 auto;
+    width: 412px;
+    height: 416px;
+    background: var(--gradient01);
+    border-radius: 30px;
+    padding: 32px 39px 32px 32px;
+}
+
+.star {
+    width: 48px;
+    height: 48px;
+    background: var(--dark-blue);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 46px;
+}
+
+.numbers {
+    display: flex;
+    gap: 20px;
+}
+
+.number-circle {
+    width: 51px;
+    height: 51px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--light-grey);
+    background-color: var(--dark-blue);
+    border-radius: 50%;
+    margin-bottom: 32px;
+}
+
+.thank-you {
+    display: none;
 }
 
 .attribution {
     font-size: 1rem;
     text-align: center;
+    color: var(--medium-grey);
 }
 
 .attribution a {
