--- a/010 - Interactive rating component/style.css
+++ b/010 - Interactive rating component/style.css
@@ -44,7 +44,7 @@ p {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 3% auto;
     width: 412px;
     height: 416px;
     background: var(--gradient01);
@@ -78,6 +78,35 @@ p {
     background-color: var(--dark-blue);
     border-radius: 50%;
     margin-bottom: 32px;
+    cursor: pointer;
+}
+
+.number-circle:hover {
+    color: var(--white);
+    background-color: var(--light-grey);
+}
+
+.number-circle:active {
+    color: var(--white);
+    background-color: var(--orange);
+}
+
+button {
+    width: 100%;
+    height: 45px;
+    border-radius: 23px;
+    border: none;
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
+    transition: all ease .3s;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+button:hover {
+    color: var(--orange);
+    background-color: var(--white);
 }
 
 .thank-you {
@@ -88,6 +117,7 @@ p {
     font-size: 1rem;
     text-align: center;
     color: var(--medium-grey);
+    margin: 50px auto;
 }
 
 .attribution a {
