--- a/011 - Stats preview card component/style.css
+++ b/011 - Stats preview card component/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
 
 :root {
     /*Primary*/
 
-    --very-dark-blue-maing-bg: ;
-    --dark-desaturated-blue-maing-bg: hsl(244, 38%, 16%);
-    --soft-violet: hsl(244, 38%, 16%);
+    --very-dark-blue-maing-bg: hsl(233, 47%, 7%);
+    --dark-desaturated-blue-card-bg: hsl(244, 38%, 16%);
+    --soft-violet: hsl(277, 64%, 61%);
 
     /*Neutral*/
 
@@ -14,7 +14,7 @@
     --white: hsl(0, 0%, 100%);
 
     --ff-inter: 'Inter', sans-serif;
-    --ff-inter: 'Lexend Deca', sans-serif;
+    --ff-lexend-deca: 'Lexend Deca', sans-serif;
 
     --fs-1: 15px;
     --fs-2: 28px;
@@ -27,17 +27,40 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: var(--ff-overpass);
+}
+
+body {
+    background: var(--very-dark-blue-maing-bg);
+}
+
+.container {
+    background-color: var(--dark-desaturated-blue-card-bg);
+}
+
+h1 {
+    color: var(--white);
+    font-family: var(--ff-inter);
+    font-weight: var(--fw-700);
+}
+
+.span-title {
+    color: var(--soft-violet);
+}
+
+p {
+    color: var(--slightly-transparent-white-paragraph);
+    font-family: var(--ff-lexend-deca);
 }
 
 .attribution {
+    font-family: var(--ff-inter);
     font-size: 1rem;
     text-align: center;
-    color: var(--medium-grey);
+    color: var(--slightly-transparent-white-paragraph);
     margin: 50px auto;
 }
 
 .attribution a {
     text-decoration: none;
-    color: hsl(228, 45%, 44%);
+    color: var(--soft-violet);
 }
