--- a/011 - Stats preview card component/style.css
+++ b/011 - Stats preview card component/style.css
@@ -34,10 +34,9 @@ body {
 }
 
 .container {
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
     margin: 0 auto;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,6 +46,7 @@ body {
     width: 70vw;
     border-radius: 7px;
     background: var(--dark-desaturated-blue-card-bg);
+    display: flex;
 }
 
 .main .text {
@@ -54,8 +54,11 @@ body {
     padding: 4rem;
 }
 
-.main .header-img {
+.main .img {
     width: 50%;
+    border-radius: 0 7px 7px 0;
+    background: linear-gradient(0deg, hsl(277, 64%, 61%, 0.5) 0%, hsla(277, 49%, 29%, 0.5)100% ), url(images/image-header-desktop.jpg) center no-repeat;
+    background-size: cover;
 }
 
 h1 {
@@ -73,12 +76,12 @@ p {
     color: var(--slightly-transparent-white-paragraph);
     font-family: var(--ff-lexend-deca);
     font-size: var(--fs-1);
+    margin: 1.5rem 0 3rem 0;
 }
 
-.stats {
+.main .stats {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .big-numbers {
@@ -106,4 +109,36 @@ p {
 .attribution a {
     text-decoration: none;
     color: var(--soft-violet);
+}
+
+/* Responsive */
+
+@media (max-width: 375px) {
+    .main {
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        width: 98vw;
+        height: 98vh;
+    }
+
+    .main .text {
+        width: auto;
+        height: 70%;
+        text-align: center;
+        padding: 1.5rem;
+    }
+
+    .main .stats {
+        flex-direction: column;
+    }
+
+    .main .stats .companies, .main .stats .templates {
+        margin-bottom: 2rem;
+    }
+
+    .main .img {
+        height: 30%;
+        width: 100%;
+        border-radius:  7px 7px 0 0;
+    }
 }
