--- a/011 - Stats preview card component/style.css
+++ b/011 - Stats preview card component/style.css
@@ -30,23 +30,25 @@
 }
 
 body {
+    min-height: 100vh;
     background: var(--very-dark-blue-maing-bg);
+    display: flex;
+    align-items: center;
+    flex-direction: column;    
 }
 
 .container {
-    width: 90vw;
-    height: 100vh;
+    max-width: 1020px;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .main {
-    width: 70vw;
-    border-radius: 7px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 15px;
+    overflow: hidden;
+    margin: 2rem;
     background: var(--dark-desaturated-blue-card-bg);
-    display: flex;
 }
 
 .main .text {
@@ -54,11 +56,24 @@ body {
     padding: 4rem;
 }
 
-.main .img {
-    width: 50%;
-    border-radius: 0 7px 7px 0;
-    background: linear-gradient(0deg, hsl(277, 64%, 61%, 0.5) 0%, hsla(277, 49%, 29%, 0.5)100% ), url(images/image-header-desktop.jpg) center no-repeat;
-    background-size: cover;
+.img {
+    position: relative;
+}
+
+.img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.img::after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: hsla(277, 64%, 61%, 0.6);
 }
 
 h1 {
@@ -113,12 +128,9 @@ p {
 
 /* Responsive */
 
-@media (max-width: 375px) {
+@media only screen and (max-width: 475px) {
     .main {
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        width: 98vw;
-        height: 98vh;
+        grid-template-columns: 1fr;
     }
 
     .main .text {
@@ -137,8 +149,6 @@ p {
     }
 
     .main .img {
-        height: 30%;
-        width: 100%;
-        border-radius:  7px 7px 0 0;
+        order: -1;
     }
 }
